commit bf3d102fb083a1a43aabd564663ad3da1daa8fd6
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Fri Feb 27 02:40:11 2015 -0800

    add file name when failing to open input

commit 4932214e2c353e67414d305d0925b72f112c6600
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Fri Feb 27 02:36:40 2015 -0800

    moving error message to log system

commit 572cca1701f2fea7a1680bdbf2b7c9b8f6577ecb
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Fri Feb 27 01:45:52 2015 -0800

    fixing write after deallocation

commit 969535de27847bdeb9532a98c4cd151304406535
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Fri Feb 27 01:20:59 2015 -0800

    check for null on DVDReadLog

commit 77c9828ea73310dd9b0eff6a35a5c16efc0b8aec
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Thu Feb 26 23:00:03 2015 -0800

    moving msvc files up one dir

commit 6d9082c54a3c840c86a4027a54c7b03061710f16
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Thu Feb 26 22:49:19 2015 -0800

    added DVDOpenEx2 API to maintain compatibility with old software

commit 2deff76fe7d38c63acf3a5cf2723cd9741a444b1
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Thu Feb 26 22:37:19 2015 -0800

    updated to dvdread 5.0.2

commit 2609ec5f9d34123b1ed3c908d9a114942d953f06
Author: Alberto Vigata <alberto@nelalabs.com>
Date:   Thu Feb 26 16:00:52 2015 -0800

    initial commit